# craken

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
DOCS/: CORE_CONCEPTS.md  GETTING_STARTED.md  INTRODUCTION.md
crates/craken-cli/: Cargo.toml  README.md
crates/craken-cli/src/: generate.rs  hot_reload.rs  lib.rs  main.rs
crates/craken-config/: Cargo.toml  README.md
crates/craken-config/src/: lib.rs
crates/craken-container/: Cargo.toml  README.md
crates/craken-container/src/: lib.rs
crates/craken-core/: Cargo.toml  README.md
crates/craken-core/src/: lib.rs
crates/craken-database/: Cargo.toml  README.md
crates/craken-database/src/: lib.rs  migration.rs  model.rs  repository.rs  seeder.rs
crates/craken-http/: Cargo.toml  README.md
crates/craken-http/src/: auth.rs  context.rs  error.rs  inject.rs  jwt.rs  lib.rs  middleware.rs  server.rs  validated.rs
crates/craken-http/tests/: providers.rs
crates/craken-logging/: Cargo.toml  README.md
crates/craken-logging/src/: lib.rs
crates/craken-macros/: Cargo.toml  README.md
crates/craken-macros/src/: controller.rs  lib.rs  model.rs  route.rs
examples/craken-app/: Cargo.toml
examples/craken-app/src/: main.rs
scripts/: dev.sh  publish.sh
