[workspace]
members = [
    "crates/craken-macros",
    "crates/craken-container",
    "crates/craken-core",
    "crates/craken-database",
    "crates/craken-http",
    "crates/craken-config",
    "crates/craken-logging",
    "crates/craken-cli",
]
# Exclude example apps from the workspace
exclude = [
    "my-app",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Aung Min Khant <aungminkhant.shay@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/shayyz-code/craken"
homepage = "https://github.com/shayyz-code/craken"
description = "An opinionated, batteries-included Rust web framework. Designed for structured, production-ready backend applications."
keywords = ["web", "framework", "async", "backend", "laravel-like"]
categories = ["web-programming", "asynchronous"]

[workspace.dependencies]
# Internal crates
# NOTE: Publish order is:
# 1. craken-container
# 2. craken-macros
# 3. craken-logging
# 4. craken-config
# 5. craken-core
# 6. craken-http
# 7. craken-database
# 8. craken-cli
craken-core = { version = "0.1.1", path = "crates/craken-core" }
craken-http = { version = "0.1.1", path = "crates/craken-http" }
craken-container = { version = "0.1.1", path = "crates/craken-container" }
craken-database = { version = "0.1.1", path = "crates/craken-database" }
craken-cli = { version = "0.1.1", path = "crates/craken-cli" }
craken-macros = { version = "0.1.1", path = "crates/craken-macros" }
craken-logging = { version = "0.1.1", path = "crates/craken-logging" }
craken-config = { version = "0.1.1", path = "crates/craken-config" }

# External dependencies (shared versions)
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
heck = "0.4"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
clap = { version = "4.0", features = ["derive"] }
tower = { version = "0.4", features = ["full"] }
http = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.0"
