[package]
name = "craken-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Craken framework."

[[bin]]
name = "craken"
path = "src/main.rs"

[dependencies]
craken-core.workspace = true
clap.workspace = true
tokio.workspace = true
notify.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
