[package]
name = "craken-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hierarchical configuration management for the Craken framework."

[dependencies]
serde.workspace = true
config.workspace = true
dotenvy = "0.15"
