[package]
name = "craken-container"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compile-time safe dependency injection container for the Craken framework."

[dependencies]
anyhow.workspace = true
