[package]
name = "craken-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the Craken framework."

# proc-macro crates must set this flag.
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn         = { version = "2.0", features = ["full", "extra-traits"] }
quote       = "1.0"
heck        = "0.4"
